<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_waitlist"
            app:destination="@id/navigation_waitlist" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_reservation"
            app:destination="@id/navigation_reservation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_waitlist"
        android:name="com.example.myapplication.ui.waitlist.WaitlistFragment"
        android:label="@string/title_waitlist"
        tools:layout="@layout/fragment_waitlist" >
        <action
            android:id="@+id/action_navigation_waitlist_to_navigation_wait_state"
            app:destination="@id/navigation_wait_state" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wait_state"
        android:name="com.example.myapplication.ui.waitlist.WaitStateFragment"
        android:label="@string/title_wait_state"
        tools:layout="@layout/fragment_wait_state" />

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.example.myapplication.ui.reservation.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" >
        <action
            android:id="@+id/action_navigation_reservation_to_navigation_reserve_table"
            app:destination="@id/navigation_reserve_table" />
        <action
            android:id="@+id/action_navigation_reservation_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reserve_table"
        android:name="com.example.myapplication.ui.reservation.ReserveTableFragment"
        android:label="@string/title_reserve_table"
        tools:layout="@layout/fragment_reserve_table" >
        <action
            android:id="@+id/action_navigation_reserve_table_to_navigation_reservation"
            app:destination="@id/navigation_reservation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.myapplication.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" >
        <action
            android:id="@+id/action_navigation_personal_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="@string/title_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.myapplication.ui.login.RegisterFragment"
        android:label="@string/title_register" />
</navigation>